WindGroup Dev/src/objects/PO_Payment_Arrangement__c.object
<CustomObject>
    <fields>
        <fullName>Invoice_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoice Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Amount__c</fullName>
        <formula>Purchase_Order__r.PO_Amount__c *  Payment_Term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>PO: PO Amount * Payment Term</inlineHelpText>
        <label>PO Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Arrangement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Arrangement</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Payment_Arrangement__c.Vendor_Name__c</field>
                <operation>equals</operation>
                <valueField>$Source.Vendor_Name__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Payment_Arrangement__c</referenceTo>
        <relationshipLabel>PO Payment Arrangement</relationshipLabel>
        <relationshipName>PO_Payment_Terms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Due__c</fullName>
        <label>Payment Due</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Payment_Due</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Term__c</fullName>
        <label>Payment Term</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order</label>
        <referenceTo>Purchase_Order__c</referenceTo>
        <relationshipName>PO_Payment_Terms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Seq_No__c</fullName>
        <formula>VALUE( TEXT(Payment_Arrangement__r.Seq_No__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seq No.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Amount__c</fullName>
        <formula>Purchase_Order__r.Tax_Amount__c  *  Payment_Term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>PO: Tax Amount * Payment Term</inlineHelpText>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_PO_Amount__c</fullName>
        <formula>Purchase_Order__r.Total_PO_Amount__c *  Payment_Term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total PO Amount * Payment Term</inlineHelpText>
        <label>Total PO Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PO Payment Arrangement</relationshipLabel>
        <relationshipName>PO_Payment_Arrangement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Name_formula__c</fullName>
        <formula>Purchase_Order__r.Vendor_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Name</label>
        <type>Text</type>
    </fields>
    <label>PO Payment Arrangement</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>PO PT ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PO Payment Arrangement</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Update_only_for_particular_PO_status</fullName>
        <active>true</active>
        <description>Cannot update only if the PO status is In-Approval or Issued</description>
        <errorConditionFormula>AND(OR(ISPICKVAL(Purchase_Order__r.Status__c,&apos;In-Approval&apos;),ISPICKVAL(Purchase_Order__r.Status__c,&apos;Issued&apos;)),NOT(ISNEW()),NOT( Purchase_Order__r.PO_Line_Validation_Bypass__c) )</errorConditionFormula>
        <errorMessage>PO Payment Arrangement can only be updated when PO status is Draft or Rejected</errorMessage>
    </validationRules>
</CustomObject>